Added a link to the GitHub repository

--- a/index.html
+++ b/index.html
@@ -33,5 +33,11 @@
       <div class="learn-more-button btn">LEARN MORE</div>
     </div>
     <script src="../src/script.js"></script>
+    <footer>
+      This project was coded by Kanako Saitoh and is
+      <a href="https://github.com/Kanakosaitoh/travel-project"
+        >open sourced on GitHub</a
+      >
+    </footer>
   </body>
 </html>
