--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
-    <div class="hero">
-      <h4>.TRAVEL.</h4>
-      <h1>Welcome to Croatia</h1>
-      <h3>Beautiful Country in Eastern Europe</h3>
-      <div class="learn-more-button btn">LEARN MORE</div>
+    <div class="container">
+      <header>
+        <h3>.TRAVEL.</h3>
+        <h1>Welcome to Croatia</h1>
+        <h2>Beautiful Country in Eastern Europe</h2>
+        <a href="../">Learn more</a>
+      </header>
     </div>
+
     <script src="../src/script.js"></script>
     <footer>
       This project was coded by Kanako Saitoh and is
