--- a/index.html
+++ b/index.html
@@ -36,28 +36,30 @@
     </div>
 
     <footer>
-      <div class="grid">
+      <section class="grid">
         <div>
-          <h3>More about Croatia</h3>
-          <ul>
-            <li><a href="" target="_blank">Zagreb airport website</a></li>
-            <li><a href="" target="_blank">Public transport map</a></li>
-            <li><a href="" target="_blank">Map of Croatia</a></li>
-          </ul>
-        </div>
-        <div>
-          <h3>About me</h3>
-          <p>My name is Kanako Saitoh. I'm based in Burnaby, Canada.</p>
-        </div>
+          <div>
+            <h3>More about Croatia</h3>
+            <ul>
+              <li><a href="" target="_blank">Zagreb airport website</a></li>
+              <li><a href="" target="_blank">Public transport map</a></li>
+              <li><a href="" target="_blank">Map of Croatia</a></li>
+            </ul>
+          </div>
+          <div>
+            <h3>About me</h3>
+            <p>My name is Kanako Saitoh. I'm based in Burnaby, Canada.</p>
+          </div>
 
-        <div>
-          <h3>More about this website</h3>
-          This project was coded by Kanako Saitoh and is
-          <a href="https://github.com/Kanakosaitoh/travel-project"
-            >open sourced on GitHub</a
-          >
+          <div>
+            <h3>More about this website</h3>
+            This project was coded by Kanako Saitoh and is
+            <a href="https://github.com/Kanakosaitoh/travel-project"
+              >open sourced on GitHub</a
+            >
+          </div>
         </div>
-      </div>
+      </section>
     </footer>
     <script src="../src/script.js"></script>
   </body>
