--- a/index.html
+++ b/index.html
@@ -11,17 +11,6 @@
       rel="stylesheet"
     />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
     <title>Welcome to Croatia</title>
     <link rel="stylesheet" href="/src/style.css" />
   </head>
@@ -35,8 +24,21 @@
       </header>
     </div>
 
+    <main>
+      <section class="grid grid-2-columns">
+        <div>
+          <img src="../images/beach.png" class="beach-photo image-fluid" />
+        </div>
+        <div>
+          <h4>Why Croatia?</h4>
+          <h2>Beaches, beaches, beaches...</h2>
+          <p>Croatia has 2500 miles of coastline and close to 1200 islands</p>
+        </div>
+      </section>
+    </main>
+
     <footer>
-      <section class="grid">
+      <section class="grid grid-3-columns">
         <div>
           <h3>More about Croatia</h3>
           <ul>
