Added photos, main sections and cards

--- a/index.html
+++ b/index.html
@@ -32,13 +32,150 @@
         <div>
           <h4>Why Croatia?</h4>
           <h2>Beaches, beaches, beaches...</h2>
-          <p>Croatia has 2500 miles of coastline and close to 1200 islands</p>
+          <p>
+            Croatia has 2500 miles of coastline and close to 1200 islands.
+            Croatia has unpolluted marine areas with nature reserves and 116
+            Blue Flag beaches. Croatia was ranked first in Europe for swimming
+            water quality in 2022 by European Environmental Agency.
+          </p>
+        </div>
+      </section>
+      <section class="secondary">
+        <h4 class="text-center">Beaches</h2>
+        <h3 class="text-center">Beaches on the Northern west coast</h3>
+        <div class="grid grid-3-columns">
+          <div class="card">
+            <div class="card-header">
+              <img
+                src="../images/rovinj.png"
+                class="img-responsive"
+              />
+            </div>
+            <div class="card-body">
+              <h4>
+                Rovinj
+              </h4>
+              <p>
+
+              </p>
+            </div>
+            <div class="card-footer"></div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <img
+                src="../images/krk-beach.png"
+                class="img-responsive photo"
+              />
+            </div>
+            <div class="card-body">
+              <h4>
+                Glavotok, Krk island
+              </h4>
+              <p>
+                
+              </p>
+            </div>
+            <div class="card-footer"></div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <img
+                src="../images/crikvenica-beach.png"
+                class="img-responsive"
+              />
+            </div>
+            <div class="card-body">
+              <h4>
+                Crikvenica
+              </h4>
+              <p>
+                
+              </p>
+            </div>
+            <div class="card-footer"></div>
+          </div>
+        </div>
+      </section>
+      <section class="grid grid-2-columns">
+        <div>
+          <img src="../images/seafood.png" class="seafood-photo img-responsive" />
+        </div>
+        <div>
+          <h4>things you don't wanna miss</h4>
+          <h2>My favorite things to do in Croatia</h2>
+          <div>
+          <p>
+            Enjoy fresh local seafood.<br />
+            <strong>Buzara</strong>: A dish made with fresh local shellfish like scampi, shrimp, mussels, or clams, cooked with garlic, tomato paste, parsley, and breadcrumb
+          </p>
+          </div>
+        </div>
+      </section>
+      <section class="secondary">
+        <h4 class="text-center">Restaurants</h2>
+        <h3 class="text-center">Restaurants that locals go</h3>
+        <div class="grid grid-3-columns">
+          <div class="card">
+            <div class="card-header">
+              <img
+                src="../images/susak.png"
+                class="img-responsive"
+              />
+            </div>
+            <div class="card-body">
+              <h4>
+                restoran NA SUŠAKU
+              </h4>
+              <p>
+              If you live in or are visiting Rijeka, visit the original Rijeka tavern Na Sušaku near the Tower Center. You will enjoy local quality cuisine based on imaginative local dishes. From the rich offer we highlight: pljukanci in the "shepherd's" and "sailor's" style, šurlice "Sušak", fuži with truffles as well as a rich selection of meat dishes, dishes baked in an oven and grilled. Of course, vegetarians are not forgotten either, for whom dishes are prepared tailored to their wishes.
+The hosts are particularly proud of their homemade bread, as well as their daily fresh cakes and pastries. Depending on the season, they will offer you delicious fruit cakes, such as strawberry cubes in mascarpone cream.
+              </p>
+            </div>
+            <div class="card-footer"></div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <img
+                src="../images/squid.png"
+                class="img-responsive photo"
+              />
+            </div>
+            <div class="card-body">
+              <h4>
+                Rivica
+              </h4>
+              <p>
+                Rivica is iconic to Krk with a family history of food and hospitality lasting three generations. Some call it a hedonistic experience with attention paid to detail, what’s important is that it offers a fusion of traditional Mediterranean cuisine and modern gastronomy. Seafood is definitely high on the menu as is local produce from truffles to asparagus blended with other foods. There is also a small wine cellar inside the restaurant featuring mostly local Croatian wines.
+              </p>
+            </div>
+            <div class="card-footer"></div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <img
+                src="../images/konoba-pud-brest.png"
+                class="img-responsive"
+              />
+            </div>
+            <div class="card-body">
+              <h4>
+                Konoba Pud Brest
+              </h4>
+              <p>Homemade flavors, local specialties.
+                 Vegetables grown in our own garden, seafood caught by local fishermen, lambs raised in our own flock, herbs grown in the area.
+                 These are what make our restaurant truly special, and yet one of the most significant representatives of traditional local cuisine.
+                <a href="https://pud-brest.com/"></a>
+              </p>
+            </div>
+            <div class="card-footer"></div>
+          </div>
         </div>
       </section>
     </main>
 
     <footer>
-      <section class="grid grid-3-columns">
+      <section class="grid grid-3-columns-with-first-narrow">
         <div>
           <h3>More about Croatia</h3>
           <ul>
