--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <h3>.TRAVEL.</h3>
         <h1>Welcome to Croatia</h1>
         <h2>Beautiful Country in Eastern Europe</h2>
-        <a href="../">Learn more</a>
+        <a href="/#more">Learn more</a>
       </header>
     </div>
 
     <main>
-      <section class="grid grid-2-columns">
+      <section  id="more" class="grid grid-2-columns">
         <div>
           <img src="../images/beach.png" class="beach-photo image-fluid" />
         </div>
@@ -137,7 +137,8 @@
             </div>
             <div class="card-footer">
               
-              <a href="https://restaurantguru.com/Na-Susaku-Rijeka">LEARN MORE</a>
+              <a href="https://restaurantguru.com/Na-Susaku-Rijeka" target="_blank">
+                LEARN MORE</a>
             </div>
           </div>
           <div class="card">
@@ -159,7 +160,7 @@
               <p><strong>Address</strong><br/>Pulska ul. 30, 51000, Rijeka, Croatia</p>
             </div>
             <div class="card-footer ">
-              <a href="https://www.facebook.com/konobaribica/#">LEARN MORE</a>
+              <a href="https://www.facebook.com/konobaribica/#"target="_blank">LEARN MORE</a>
             </div>
           </div>
           <div class="card">
@@ -183,7 +184,7 @@
                 Milohnići 41, 51511, Milohnići, Croatia</p>
             </div>
             <div class="card-footer">
-              <a href="https://pud-brest.com/">LEARN MORE</a>
+              <a href="https://pud-brest.com/" target="_blank">LEARN MORE</a>
             </div>
           </div>
         </div>
@@ -195,14 +196,14 @@
         <div>
           <h3>More about Croatia</h3>
           <ul>
-            <li><a href="" target="_blank">Zagreb airport website</a></li>
-            <li><a href="" target="_blank">Public transport map</a></li>
-            <li><a href="" target="_blank">Map of Croatia</a></li>
+            <li><a href="https://www.zagreb-airport.hr/en" target="_blank">Zagreb airport website</a></li>
+            <li><a href="https://www.visit-croatia.co.uk/travelling-around-croatia/" target="_blank">Public transport map</a></li>
+            <li><a href="https://maps.app.goo.gl/HeGa1yZ3DTLr56zA7" target="_blank">Map of Croatia</a></li>
           </ul>
         </div>
         <div>
           <h3>About me</h3>
-          <p>My name is Kanako Saitoh. I'm based in Burnaby, Canada.</p>
+          <p>My name is Kanako Saitoh. <br />I'm based in Burnaby, Canada.🇨🇦</p>
         </div>
 
         <div>
@@ -210,7 +211,7 @@
           This project was coded by Kanako Saitoh and is
           <a href="https://github.com/Kanakosaitoh/travel-project"
             >open sourced on GitHub</a
-          >
+          > and hosted on <a href="https://travel-project-kanakosaitoh.netlify.app/">Netlify</a>.
         </div>
       </section>
     </footer>
