Made card photos responsive

--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
           <img src="../images/seafood.png" class="seafood-photo img-responsive" />
         </div>
         <div>
-          <h4>things you don't wanna miss</h4>
-          <h2>My favorite things to do in Croatia</h2>
+          <h4 class="text-center">things you don't wanna miss</h4>
+          <h2 class="text-center">My favorite thing to do in Croatia</h2>
           <div>
-          <p>
+          <p class="text-center">
             Enjoy fresh local seafood.<br />
             <strong>Buzara</strong>: A dish made with fresh local shellfish like scampi, shrimp, mussels, or clams, cooked with garlic, tomato paste, parsley, and breadcrumb
           </p>
@@ -120,7 +120,7 @@
             <div class="card-header grid grid-2-columns">
               <img
                 src="../images/susak.png"
-                class="photos img-responsive"
+                class="photos img-responsive embed"
               />
               <iframe class="embed" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d361664.67038866814!2d14.059180922261474!3d44.91306007096201!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4764a04dd9692335%3A0x50acda3a4d226f75!2sNa%20Su%C5%A1aku!5e0!3m2!1sen!2sca!4v1740439573490!5m2!1sen!2sca" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
@@ -145,7 +145,7 @@
             <div class="card-header grid grid-2-columns">
               <img
                 src="../images/squid.png"
-                class="img-responsive"
+                class="img-responsive photos embed"
               />
               <iframe class="embed" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2804.509828752562!2d14.383799799999997!3d45.33851979999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4764a7e7322cad95%3A0xf06d0d1a74c64149!2sKonoba%20Ribica!5e0!3m2!1sen!2sca!4v1740440470860!5m2!1sen!2sca"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
@@ -167,7 +167,7 @@
             <div class="card-header grid grid-2-columns">
               <img
                 src="../images/konoba-pud-brest.png"
-                class="img-responsive"
+                class="img-responsive photos embed"
               />
               <iframe class="embed" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2817.269813725341!2d14.454755276692868!3d45.08032145896921!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476369145ba4db2b%3A0x40d4b15a375bec1b!2sKonoba%20pud%20Brest!5e0!3m2!1sen!2sca!4v1740442150025!5m2!1sen!2sca"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
