Added more photos

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div>
           <h4>Why Croatia?</h4>
-          <h2>Beaches, beaches, beaches...</h2>
+          <h2>Breathtaking beaches</h2>
           <p>
             Croatia has 2500 miles of coastline and close to 1200 islands.
             Croatia has unpolluted marine areas with nature reserves and 116
@@ -187,6 +187,25 @@
               <a href="https://pud-brest.com/" target="_blank">LEARN MORE</a>
             </div>
           </div>
+        </div>
+      </section>
+      <section>
+        <h2 class="text-center">
+          My photos in Croatia
+        </h3>
+        <div class="gallery grid grid-3-columns ">
+         <img class="embed img-responsive" src="../images/wine.png"/>
+         <img class="embed img-responsive" src="../images/truffle.png"/>
+         <img class="embed img-responsive" src="../images/tartar.png"/>
+         <img class="embed img-responsive" src="../images/squid-ink-rice.png"/>
+         <img class="embed img-responsive" src="../images/rijeka.png"/>
+         <img class="embed img-responsive" src="../images/rijeka-wall.png"/>
+         <img class="embed img-responsive" src="../images/pula.png"/>
+         <img class="embed img-responsive" src="../images/pula-1.png"/>
+         <img class="embed img-responsive" src="../images/port.png"/>
+         <img class="embed img-responsive" src="../images/krk.png"/>
+         <img class="embed img-responsive" src="../images/krk-beach.png"/>
+         <img class="embed img-responsive" src="../images/cevapi.png"/>
         </div>
       </section>
     </main>
