Added a link in the footer

--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@
         </div>
         <div>
           <h3>About me</h3>
-          <p>My name is Kanako Saitoh. <br />I'm based in Burnaby, Canada.🇨🇦</p>
+          <div class="about-me">My name is Kanako Saitoh. <br />I'm a front-end developer based in Burnaby, Canada.🇨🇦
+           <br />I created this page as part of a project for <a href="https://www.shecodes.io/">SheCodes Responsive</a> to develop my coding skills.</div>
         </div>
 
         <div>
