Changed the name of the restaurant

--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
             </div>
             <div class="card-body">
               <h4>
-                Rivica
+                Konoba Ribica
               </h4>
               
               <p>
-                Rivica is iconic to Krk with a family history of food and hospitality lasting three generations. Some call it a hedonistic experience with attention paid to detail, what’s important is that it offers a fusion of traditional Mediterranean cuisine and modern gastronomy. Seafood is definitely high on the menu as is local produce from truffles to asparagus blended with other foods. There is also a small wine cellar inside the restaurant featuring mostly local Croatian wines.
+                Konoba Ribica is a seafood restaurant featuring mostly local Croatian wines.
               </p>
               <p><strong>Address</strong><br/>Pulska ul. 30, 51000, Rijeka, Croatia</p>
             </div>
